---------------------------------------------------------------------------------------------------
Version: 1.3.13
Date: 16/12/25
  Changes:
    - Changed that the bronze star "extra trade" effect to apply on ALL hex cores, not just ones that never had an extra trade given to it before.
    - Changed that the belt capacity tech from this mod doesn't consume promethium science packs.
    - Dungeon hexes with extra trades from the bronze effect no longer ping them in chat if they are in uncharted areas of the map.
  Bugfixes:
    - Fixed that spidertrons and other vehicles would disappear when a hex core spawns underneath them.
    - Fixed that connecting cliff sprites were not updated after a hex core spawns in their way, destroying them.
    - Fixed that the mod setting for the bronze rank effect did not actually change the effect.
  Optimizations:
    - Throttled processing for most frame-dropping events: item rank ups (trade productivity updates), hex tile placement, trade overview calculations.
    - When multiple players are using the trade overview simulataneously, the calculations are load balanced (full speed for one player, half speed for two players, etc.).
    - Optimized sorting trades in the trade overview by total item value.
---------------------------------------------------------------------------------------------------
Version: 1.3.12
Date: 16/12/25
  Bugfixes:
    - Fixed that massively overspending coins while receiving passive coin buffs caused an explosion of hexaprism coin gain.
---------------------------------------------------------------------------------------------------
Version: 1.3.11
Date: 16/12/25
  Changes:
    - Stopped spamming the logs.
---------------------------------------------------------------------------------------------------
Version: 1.3.10
Date: 16/12/25
  Changes:
    - Increased the Passive Coins buff interval of coin accumulation from 10 seconds to 30 seconds.
  Bugfixes: