@@ -4,7 +4,7 @@ data:extend({
         type = "double-setting",
         name = "hextorio-rank-2-prod-requirement",
         setting_type = "runtime-global",
-        default_value = 0.3,
+        default_value = 0.35,
         minimum_value = -10,
         maximum_value = 10,
         order = "t[ranks]-j[prod-req-2]",
@@ -13,7 +13,7 @@ data:extend({
         type = "double-setting",
         name = "hextorio-rank-3-prod-requirement",
         setting_type = "runtime-global",
-        default_value = 0.7,
+        default_value = 0.85,
         minimum_value = -10,
         maximum_value = 10,
         order = "t[ranks]-j[prod-req-3]",
@@ -22,7 +22,7 @@ data:extend({
         type = "double-setting",
         name = "hextorio-rank-4-prod-requirement",
         setting_type = "runtime-global",
-        default_value = 1.2,
+        default_value = 1.3,
         minimum_value = -10,
         maximum_value = 10,
         order = "t[ranks]-j[prod-req-4]",
