@@ -1,6 +1,11 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.13
 Date: 16/12/25
+  Balancing:
+    - Increased default mod settings for productivity rank-up requirements:
+        Bronze -> Silver: 35%
+        Silver -> Gold: 85%
+        Gold -> Red: 130%
   Changes:
     - Changed that the bronze star "extra trade" effect to apply on ALL hex cores, not just ones that never had an extra trade given to it before.
     - Changed that the belt capacity tech from this mod doesn't consume promethium science packs.
